bugfix footer on safari

--- a/www/stylus/objects/section.footer_objects.styl
+++ b/www/stylus/objects/section.footer_objects.styl
@@ -4,14 +4,15 @@
     min-height 18.8rem
     &__container
       display flex
-      justify-content center
       flex-direction column
-      width 20rem
+      width 10rem
       margin 0 auto
       padding 0 1.5 5rem 1.5rem
 
 .icons
   margin 0 auto 2rem auto
+  &:nth-child(4)
+    padding-bottom 4rem
   &__container
       width 10rem
       height: 10rem
